--- a/Figuras/FIGURAS.CSS
+++ b/Figuras/FIGURAS.CSS
@@ -3,41 +3,42 @@
     padding: 0;
 }
 body {
-    background-color: rgb(224, 213, 199);
+    background-color: rgb(45, 29, 8);
     /* font-size: 1.3rem; */
 }
 
 /* HEADER */
 header {
-    background-color: aqua;
+    background-color: rgb(64, 117, 117);
     height: 110px;
     padding: 20px;
     font-size: 1.3rem;
+    color: rgb(242, 255, 215);
 }
 /* HEADER */
 /* MAIN CONTAINER */
 #main-container {
     margin: 20px 15px;
     /* background-color: azure; */
+    color: rgb(242, 255, 215);
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 550px;    
-    gap: 15px;
-    font-size: 1.3rem;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 600px;    
+    gap: 10px;
+    font-size: 1.1rem;
     line-height: 1.6;
 }
 #main-container h2 {
     font-size: 2rem;
 }
 #main-container label {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
 }
 
 #main-container input {
-    width: auto;
     border-radius: 7px;
     padding: 2px;
-    width: 130px;
+    width: 55px;
 }
 /* // MAIN CONTAINER */
 /* BUTTOMS */
@@ -51,16 +52,21 @@ button {
 /* BUTTOMS */
 /* FIGURE */
 .pic-place {
+    padding-top: 10px;
     width: 100%;
     height: 250px;
-    border: 1px solid darkblue;
+    /* border: 1px solid darkblue; */
     margin-bottom: 15px;
+}
+.pic-place img {
+    width: 75%;
+    height: 230px;
 }
 /* FIGURE */
 
 .box {
     text-align: center;
-    background-color: aqua;
+    background-color: rgb(64, 117, 117);
     border: 1px solid darkblue;
     border-radius: 15px;
 }
